--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
-  - {name: 🇨🇳 中国-204.1KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-411.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-266.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-605.7KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-5.62MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-218.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇬🇧 英国-388.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-707.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇯🇵 日本-407.3KB/s(Youtube:不良林), server: ocijp.n.optage.moe, port: 44616, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: ocijp.n.optage.moe, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-411.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
