--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.31MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-740.3KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇳 中国-5.62MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-218.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇬🇧 英国-388.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-657.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-707.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇯🇵 日本-407.3KB/s(Youtube:不良林), server: ocijp.n.optage.moe, port: 44616, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: ocijp.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-242.8KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-516.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.3KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-366.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-388.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-813.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-657.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-407.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-242.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-516.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
